# claude-config-auditor

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
case-studies/: README.md  bmad-audit.html  claude-code-game-studios-audit.html  claude-flow-audit.html  superclaude-audit.html  voltagent-audit.html  wshobson-audit.html
examples/: sample-audit.html  sample-fix-output.md  sample-report.md
src/claude_config_auditor/: __init__.py  __main__.py  backup.py  cli.py  diff.py  findings.py  framework_shape.py  render_html.py  report.py  scanner.py  semantic.py  tokens.py
src/claude_config_auditor/_html/: __init__.py  _sections.py  _style.py  _template.py
src/claude_config_auditor/checks/: agents.py  budget.py  health.py  skills.py
src/claude_config_auditor/fixes/: __init__.py  agent_description.py  claude_md_archive.py  flow.py
tests/: test_accurate.py  test_agent_description.py  test_backup.py  test_checks.py  test_claude_md_archive.py  test_cli.py  test_cli_fix.py  test_diff.py  test_edge_cases.py  test_fix_flow.py  test_framework_shape.py  test_jaccard.py  test_readonly.py  test_scanner.py  test_semantic.py  test_tokens.py
tests/fixtures/broken/: CLAUDE.md
tests/fixtures/broken/.claude/agents/: bad-yaml.md  no-description.md  overlap-a.md  overlap-b.md  short-desc.md
tests/fixtures/broken/.claude/skills/no-frontmatter-skill/: SKILL.md
tests/fixtures/good/: CLAUDE.md
tests/fixtures/good/.claude/agents/: code-reviewer.md  security-reviewer.md
tests/fixtures/good/.claude/skills/example-skill/: SKILL.md
